objects/fferpcore__VirtualDataObjectTargetMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>fferpcore__Consumer__c</fullName>
        <description>The name of the Consumer invoked whenever a VirtualDataObject is received.</description>
        <inlineHelpText>The name of the Consumer invoked whenever a VirtualDataObject is received.</inlineHelpText>
        <label>Consumer</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationStrategy__c</fullName>
        <description>The strategy used to determine how existing child targets should be dealt with.</description>
        <inlineHelpText>The strategy used to determine how existing child targets should be dealt with.</inlineHelpText>
        <label>Correlation Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Append</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>UpdateTotal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationTargetKey__c</fullName>
        <description>The SObjectField on the target object used for correlation.</description>
        <inlineHelpText>The SObjectField on the target object used for correlation.</inlineHelpText>
        <label>Correlation Target Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationVirtualObjectKey__c</fullName>
        <description>The field on the VirtualDataObject used for correlation.</description>
        <inlineHelpText>The field on the VirtualDataObject used for correlation.</inlineHelpText>
        <label>Correlation Virtual Object Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This mapping is obsolete when checked.</description>
        <inlineHelpText>This mapping is obsolete when checked.</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetObject__c</fullName>
        <description>The virtual object of any child mappings, necessary for lookup and list mappings.</description>
        <inlineHelpText>The virtual object of any child mappings, necessary for lookup and list mappings.</inlineHelpText>
        <label>Target Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetPath__c</fullName>
        <description>The path to the target object as comma-seperated SObject types.</description>
        <inlineHelpText>The path to the target object as comma-seperated SObject types.</inlineHelpText>
        <label>Target Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Type__c</fullName>
        <description>The type of this mapping.</description>
        <inlineHelpText>The type of this mapping.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Writeback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__VirtualObjectPath__c</fullName>
        <description>The path to the object on the VirtualDataObject (comma-seperated).</description>
        <inlineHelpText>The path to the object on the VirtualDataObject (comma-seperated).</inlineHelpText>
        <label>Virtual Object Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Virtual Data Object Target Mapping</label>
    <pluralLabel>Virtual Data Object Target Mappings</pluralLabel>
</CustomObject>